trunk/Archive2/a4/3cfbd9090fffeb/output
main.cpp: In member function 'void a::A::test()':
main.cpp:15:22: error: 'a::C' is not a namespace
             using C::B;
                      ^
main.cpp:16:13: error: 'B' has not been declared
             B::b;
             ^
